Added discord pages, multiple header images.

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -31,6 +31,23 @@ body {
     background-repeat: no-repeat;
 }
 
+.hero.hero-1 {
+    background-image: url('/assets/images/oskoreia_header_1.png');
+}
+
+.hero.hero-2 {
+    background-image: url('/assets/images/oskoreia_header_2.png');
+}
+
+.hero.hero-3 {
+    background-image: url('/assets/images/oskoreia_header_3.png');
+}
+
+.hero.hero-4 {
+    background-image: url('/assets/images/oskoreia_header_4.png');
+}
+
+
 .hero-image {
     position: absolute;
     top: 0; left: 0; width: 100%; height: 100%;
