--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="{{ '/assets/styles/main.css' | relative_url }}">
   <link href="https://fonts.googleapis.com/css?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Audiowide&display=swap" rel="stylesheet">
-</head>
+  <script src="/assets/scripts/utils.js"></script>
+</head> 
 <body>
   {{ content }}
 </body>
