Updated websites with ship components.

--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -2,9 +2,6 @@
 <div id="modal" class="modal">
   <div class="modal-content">
     <span class="modal-close" id="modal-close">&times;</span>
-    <h2 id="modal-title">
-
-    </h2>
     <div id="modal-body">
 
     </div>
@@ -16,28 +13,28 @@
   position: fixed;
   z-index: 1000;
   left: 0; top: 0; width: 100vw; height: 100vh;
-  background: rgba(0,0,0,0.7);
+  background: var(--background);
   justify-content: center;
   align-items: center;
 }
 .modal-content {
-  background: #181a1b;
-  color: #eee;
+  background: var(--background);
+  color: var(--text);
   border-radius: 10px;
   max-width: 700px;
   width: 95vw;
   max-height: 90vh;
   overflow-y: auto;
-  padding: 2em 1.5em 1.5em 1.5em;
+  /* padding: 2em 1.5em 1.5em 1.5em; */
   position: relative;
-  box-shadow: 0 8px 32px #000a;
+  box-shadow: 0 8px 32px var(--dark);
 }
 .modal-close {
   position: absolute;
   top: 0.7em;
   right: 1.2em;
   font-size: 2em;
-  color: #aaa;
+  color: var(--text-muted);
   cursor: pointer;
   z-index: 10;
 }
@@ -60,7 +57,7 @@
   };
   window.showModal = function(title, body) {
     modal.style.display = 'flex';
-    document.getElementById('modal-title').innerText = title;
+    // document.getElementById('modal-title').innerText = title;
     modalBody.innerHTML = body;
   }
   window.closeModal = function() {
