--- a/assets/styles/ships.css
+++ b/assets/styles/ships.css
@@ -5,6 +5,7 @@
 .ships-title {
   text-align: center;
   margin-top: 2em;
+  color: var(--light);
 }
 
 .ship-grid-container {
@@ -17,14 +18,13 @@
   grid-template-columns: 60px 1fr 2fr 120px;
   gap: 1em;
   font-weight: bold;
-  background: #222;
+  background: var(--dark);
   color: var(--light);
   padding: 0.7em 1em;
   border-radius: 8px 8px 0 0;
 }
 
-.ship-grid-body {
-}
+.ship-grid-body {}
 
 .ship-grid-row {
   display: grid;
@@ -37,27 +37,32 @@
   padding: 0.7em 1em;
 }
 
+.ship-grid-row .icon {
+  width: 48px;
+  height: 48px;
+  display: inline-block;
+}
+
 .ship-avatar {
   width: 48px;
   height: 48px;
   object-fit: cover;
   border-radius: 8px;
-  
 }
 
 .ship-avatar-placeholder {
-  background: #333;
+  background: var(--background);
 }
 
 .ship-manufacturer-unknown,
 .ship-link-na {
-  color: #888;
+  color: var(--accent);
 }
 
 .ship-link-btn {
   display: inline-block;
   background: var(--accent);
-  color: #181c24;
+  color: var(--dark);
   padding: 0.4em 1em;
   border-radius: 5px;
   font-weight: 600;
@@ -67,5 +72,5 @@
 
 .ship-link-btn:hover {
   background: var(--accent);
-  color: #fff;
+  color: var(--text);
 }
